<resources>
    <string name="app_name">Grinnet</string>
    <string name="homeButton">Boton para ir a inicio</string>
    <string name="searchButton">Boton para ir a busquedas</string>
    <string name="notificationButton">Boton para ir a notificaciones</string>
    <string name="chatButton">Boton para ir a chats</string>
    <string name="mailInput">Correo electrónico</string>
    <string name="passwordInput">Contraseña</string>
    <string name="loginButton">Acceder</string>
    <string name="signupButton">Registrarse</string>
    <string name="googleButton">Continuar con Google</string>
    <string name="loginTitle">Acceder a Grinnet</string>

    <string name="nameInput">Nombre</string>
    <string name="usernameInput">Nombre de usuario</string>
    <string name="descriptionInput">Descripción</string>
    <string name="nextButton">Siguiente</string>
    <string name="usernameExistsError">El nombre de usuario ya esta en uso</string>

    <string name="alertAcceptButton">Aceptar</string>
    <string name="alertErrorTitle">Error</string>
    <string name="alertErrorMessage">Error al autenticar al usuario.</string>
    <string name="closeButton">⨉</string>
    <string name="publishButton">Publicar</string>
    <string name="postTextHint">Escriba el texto de la publicación</string>
    <string name="postImageError">Has alcanzado el límite de 4 imágenes</string>

    <string name="commentTextHint">Escriba el comentario</string>

    <string name="searchTextInformationText">Escriba el nombre del usuario que desea encontrar</string>
    <string name="searchTextNoCoincidences">No se encontro a ningun usuario con esos datos</string>

    <string name="exploreOption">Explorar todo</string>
    <string name="forYouOption">Siguiendo</string>

    <string name="followButton">Seguir</string>
    <string name="followButton2">Siguiendo</string>
    <string name="modalPositiveButton">Dejar de seguir</string>
    <string name="modalNegativeButton">Cancelar</string>
    <string name="modalUnfollowTitle">¿Dejar de seguir a @#?</string>
    <string name="modalUnfollowMessage">Es posible que ya no puedas ver algunos de sus posts.</string>
    <string name="followerText">Siguiendo</string>
    <string name="followingText">Seguidores</string>
    <string name="postsText">Publicaciones</string>

</resources>